--- a/en/index.html
+++ b/en/index.html
@@ -6,8 +6,12 @@
     <title>Mouse wheel checker online</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" sizes="256x256" href="/favicon.png">
+    <link rel="mask-icon" href="/favicon.svg">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
     <link rel="alternate" hreflang="x-default" href="https://wheel-check.gagikpog.ru/">
     <link rel="alternate" hreflang="ru" href="https://wheel-check.gagikpog.ru/">
     <link rel="alternate" hreflang="en" href="https://wheel-check.gagikpog.ru/en/">
