--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,7 @@
     <title>Mouse wheel checker online</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css?v=2">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" sizes="256x256" href="/favicon.png">
     <link rel="mask-icon" href="/favicon.svg">
@@ -41,7 +41,7 @@
             </p>
         </div>
     </main>
-    <script src="/script.js?v=1"></script>
+    <script src="/script.js?v=2"></script>
     <script defer type="text/javascript" >
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
         ym(97454852, "init", {clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});
