--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,7 @@
     <title>Mouse wheel checker online</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css?v=2">
+    <link rel="stylesheet" href="/style.css?v=3">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" sizes="256x256" href="/favicon.png">
     <link rel="mask-icon" href="/favicon.svg">
@@ -34,23 +34,27 @@
         <div id="scrollHere">
             <span class="text">scroll here</span>
             <div class="mouse">
-                <svg class="mouse-image" version="1.1" x="0px" y="0px" viewBox="0 0 2000 1500" width="2000" height="1500" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-                    <path fill="#181918" d="m 887.19846,284.23359 c -194,-18.2 -608.4,367.9 -733,594.1 -88.3,418.40001 1768.89994,315.90001 1693.49994,-302.5 5.6,-18 -546.8,-284.2 -960.49994,-291.6 z" />
-                    <path class="st-1" d="m 519.43773,756.01439 c -58.79374,82.66116 -174.41963,239.08662 -183.93927,254.41921 0,0 101.02589,36.6949 137.5,42.1 30.24509,-40.171 118.5808,-179.10001 175.4808,-261.60001 -36.43874,-11.36939 -70.81139,-20.00715 -129.04153,-34.9192 z" />
-                    <path class="st-1" d="m 1086.7984,325.83359 c 0,0 -144.89994,120.6 -218.09994,184.5 -58.6,-22 -126.3,-27.5 -133.9,-29.5 67.5,-58.1 146.75581,-124.31813 217.25581,-179.71814 43.99349,4.24419 63.94693,8.12693 134.74413,24.71814 z" />
-                    <path class="st-1" d="m 1196.4984,247.83359 c -114.2,-1.5 -230.87702,3.51184 -341.19994,33.3 -7.03763,1.90022 -64.97676,15.21954 -19.87676,9.11954 106.9,-7.7 231.3767,23.98046 318.0767,45.38046 91.7,22.5 166,78.17724 232.1741,153.25491 23.6116,26.78848 47.2259,57.94509 63.9259,63.04509 17.7,5.5 106,-21.8 207,-23.6 117.2,-2.1 159.6,11.1 199.4,82.6 9.8,-12.3 -5.4,-39.7 -14.8,-56.9 -35,-63.7 -88.5,-118.6 -148.4,-159.7 -91,-62.4 -200.6,-95.4 -307.5,-123 -61.5,-15.8 -125.4,-22.6 -188.8,-23.5 z" />
-                    <path class="st-1 st-rmb" d="m 854.79846,292.13359 c -12.8,-0.1 -25.7,0.7 -38.5,2.5 -16.7,2.4 -32.6,9 -48.6,14.3 -98,36.1 -128.4,60.8 -219.8,113.7 -158.7,104.8 -253.1,196.4 -387,414 -44.19687,98.2 74.6,123.9 151.1,168.40001 23.4,-33.40001 291.2,-384.30001 383.5,-504.80001 101.7,-83.3 212.79859,-174.75071 244.29859,-200.65071 -11.8,-1.6 -73.09859,-7.34929 -84.99859,-7.44929 z" />
-                    <path class="st-2 st-mmb" d="m 722.59846,486.93359 c -70.3,-7.3 -117.5,15.6 -167.7,108 -20.8,38.4 -26.99018,116.10626 -24.39018,152.90626 12.2,5.1 88.99018,23.49374 123.19018,36.69374 8.3,-135.1 66.7,-302.4 180,-261.5 -21.3,-21.9 -72.2,-24.9 -111.1,-36.1 z" />
-                    <path class="st-3" d="m 727.29846,554.13359 c -57.7,65.9 -70.4,177.9 -73,228.3 59.3,-82.9 75.2,-127.6 199.2,-246 -20.4,-19.3 -74.4,-41.4 -126.2,17.7 z" />
-                    <path class="st-1 st-lmb" d="m 1101.5243,330.4077 c -183.19995,144.2 -342.72584,322.32589 -470.62584,517.02589 -45.3,64.6 -95.65491,142.10982 -137.75491,208.80981 99.2,30.7 182.67356,35.8473 257.15309,41.2482 153.1188,11.1035 187.42914,-10.3022 245.39556,-57.3513 155.3216,-126.06872 188.2062,-199.90671 380.4062,-405.80671 20.3,-21.7 64.5,-69.4 56.2,-80.2 -110.9951,-143.18805 -205.2,-185.70313 -238.4,-197.9 -27.4245,-10.07509 -67.7741,-21.72589 -92.3741,-25.82589 z" />
-                    <path class="st-4" d="m 157.69846,929.13359 c -14.9,7.3 41,105.30001 60.6,156.20001 27.3,38.3 228.8,178.8 555.1,209.8 120.5,11.4 118.5,14.4 210.9,-6.1 -30.4,-73.7 -43.5,-96 -80.1,-171.3 -40.8,11.9 -93.7908,2.4709 -140.3,-2.5 -147.72944,-15.7894 -298.4213,-33.5186 -437.25353,-86.4233 -61.10036,-23.2834 -124.14647,-58.17671 -168.94647,-99.67671 z" />
-                    <path class="st-3" d="m 1711.4984,551.03359 c -34.6,-1.9 -118.9,-1 -175.2,15 -157.7,44.9 -351.5,313.2 -446.3,415.2 -94.89994,102.10001 -140.79994,106.40001 -191.69994,138.90001 -51,32.5 15.8,129.3 40,158 24.2,28.7 44,8.7 132.49994,-17.7 88.5,-26.4 216.1,-115.6 321.1,-177.6 126.4,-73.5 270.7,-114.20001 392.3,-197.10001 114.1,-69.4 40.8,-206.6 71.8,-274.8 -5.6,-17.7 -18.9,-24.1 -32,-31 -33.7,-17.5 -77.9,-27 -112.5,-28.9 z" />
-                    <path class="st-4" d="m 1542.4984,664.73359 -0.8,47.4 c -0.1,6.8 -4.7,12.8 -11.2,14.6 -129,36.1 -231.1,131.7 -282.8,254 -4.3,10.2 -17.7,12.7 -25.4,4.7 l -24.9,-25.8 c -4.2,-4.4 -5.5,-10.9 -3.2,-16.6 58.1,-143.6 177.7,-255 329,-293.7 9.9,-2.4 19.4,5.2 19.3,15.4 z" />
-                    <path class="st-3" d="m 1551.9984,664.73359 -0.8,47.4 c -0.1,6.8 -4.7,12.8 -11.2,14.6 -51.4,14.4 -98.5,38.2 -139.9,69.4 -8,6 -19.5,3.9 -24.8,-4.6 l -20.9,-33.2 c -4.7,-7.4 -3,-17.2 3.9,-22.6 50.8,-40 109.7,-69.9 174.4,-86.4 9.9,-2.4 19.5,5.2 19.3,15.4 z" />
-                    <path class="st-1 st-fmb" d="m 1556.6984,665.73359 -0.8,47.4 c -0.1,6.8 -4.7,12.8 -11.2,14.6 -51.4,14.4 -98.5,38.2 -139.9,69.4 -8,6 -19.5,3.9 -24.8,-4.6 l -20.9,-33.2 c -4.7,-7.4 -3,-17.2 3.9,-22.6 50.8,-40 109.7,-69.9 174.4,-86.4 9.9,-2.4 19.4,5.2 19.3,15.4 z" />
-                    <path class="st-3" d="m 1369.2984,799.33359 c 3.2,5.1 2.2,11.9 -2.3,15.8 -49,43.1 -88,97.8 -113.9,159.7 -4.1,9.8 -16.8,12.2 -24.1,4.5 l -23.6,-24.8 c -4,-4.2 -5.3,-10.5 -3.1,-15.9 27.8,-69.6 70.5,-131.3 124.3,-180.2 5.7,-5.2 14.8,-3.9 18.9,2.7 z" />
-                    <path class="st-1 st-bmb" d="m 1375.0984,802.63359 c 3.2,5.1 2.2,11.9 -2.3,15.8 -49,43.1 -88,97.8 -113.9,159.7 -4.1,9.8 -16.8,12.2 -24.1,4.5 l -23.6,-24.8 c -4,-4.2 -5.3,-10.5 -3.1,-15.9 27.8,-69.6 70.5,-131.3 124.3,-180.2 5.7,-5.2 14.8,-3.9 18.9,2.7 z" />
-                 </svg>
+                <svg class="mouse-image" version="1.1" viewBox="0 0 546.29348 434.86084" width="547" height="435" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+                    <defs>
+                        <style >
+                            .st-1{fill:#686868;}
+                            .st-2{fill:#a5a5a5;}
+                            .st-3{fill:#474747;}
+                            .st-4{fill:#595959;}
+                        </style>
+                    </defs>
+                    <path fill="#3e3f3f" d="m 344.38,42.793327 c 78.05,48.24 155.59,99.120003 194.36,214.000003 18.22,70.1 1.23,91.71 -27,122 -80.32,86.18 -157.36,52 -202,34 -47,-19 -56.36,-25 -158.36,-115 -38,-33.57 -132.000001,-96.05 -141.000001,-146 -5.5499992,-30.94 10,-87.000003 71,-122.000003 C 111.5,12.523327 171.71,5.4433273 206.38,3.7933273 c 35.82,-1.69 107.51,20.2099997 138,38.9999997 z" />
+                    <path class="st-1 st-rmb" d="m 255.37,67.493327 c 7.85,-5.75 31.11,-20.92 68.91,-30.08 a 2.72,2.72 0 0 0 0.7,-5 C 272.13,2.7533273 205.88,-3.7566727 160.38,1.8033273 116.1,7.2033273 88.819999,23.103327 80.279999,28.803327 a 1,1 0 0 0 0.61,1.8 l 10.14,-0.67 a 4.4,4.4 0 0 0 2.29,-0.83 c 0.9,-0.66 2.6,-1.84 5.740003,-3.82 a 11.59,11.59 0 0 1 5.449998,-1.8 c 17,-1.13 66.34,5 68.79,5.3 a 0.45,0.45 0 0 1 0.18,0.07 c 2,1.11 -4.64,5.08 -6.68,7.4 a 0.49,0.49 0 0 0 0.21,0.78 l 81.69,31.4 a 7.13,7.13 0 0 0 6.67,-0.94 z" />
+                    <path class="st-2 st-mmb" d="m 166.79,36.243327 a 0.5,0.5 0 0 0 0.21,0.79 l 0.28,0.11 -15.35,13.44 a 2.84,2.84 0 0 1 -1.19,0.62 c -5.51,1.33 -42.67,9.08 -51.529998,-21.28 a 2.82,2.82 0 0 1 0.27,-2.18 q 1.129998,-2 2.289998,-3.75 a 54.84,54.84 0 0 1 8,-9.92 c 9.07,-8.7099997 18.67,-10.2699997 27.57,-8.2899997 14.85,3.2999995 27.8,16.4299997 33.26,22.6799997 0.4,0.45 0.76,0.87 1.08,1.25 a 2.77,2.77 0 0 1 0.64,1.77 c -1.68,1.52 -4.36,3.44 -5.53,4.76 z" />
+                    <path fill="#7f7f7f" d="m 96.379999,45.053327 c 45.700001,26.93 55.000001,6 55.000001,6 0,0 -53.959998,-64.87 -55.000001,-6 z" />
+                    <path class="st-1 st-lmb" d="m 66.379999,37.793327 c -26.36,12.65 -74.6699992,69.820003 -65.1499992,97.570003 a 0.92,0.92 0 0 0 0.6,0.57 c 86.4799992,25.68 122.6000002,38.54 136.8900002,44.16 a 12.25,12.25 0 0 0 14.37,-4.17 c 14.9,-20.34 47.15,-69.53 94,-103.190003 a 0.89,0.89 0 0 0 -0.18,-1.55 c -80.51,-27.39 -81.33,-33.49 -84.51,-31.39 0,0 -10,12 -14.51,11.27 l -56.700001,-7.5 c -3.11,-0.41 -4,-4.55 -1.79,-6.77 2,-2 0.67,-2.75 -1,-2.63 -6.89,0.51 -17.79,1.61 -22.02,3.63 z" />
+                    <path fill="#353535" d="M -1.9643159e-7,139.09333 C 110.8,171.09333 110.8,171.09333 142.8,186.15333 c 32,15.06 227.54,105.61 178.6,231.28 -58.84,-11.43 -157.38,-107.35 -197.5,-141.37 -66.000001,-55.97 -115.9000007,-90.21 -123.90000019643159,-136.97 z" />
+                    <path fill="#262626" d="m 236.51,281.51333 -10.62,4.43 a 6.84,6.84 0 0 1 -7.2,-1.23 c -46.93,-43.92 -67.59,-52 -114.63,-67.82 a 5.69,5.69 0 0 1 -4.06,-6.18 l 2.43,-14.81 c 0.57,-3.49 4.48,-5.66 8.21,-4.59 49.85,14.44 77.69,33.8 127.79,81.09 3,2.82 2.08,7.47 -1.92,9.11 z" />
+                    <path class="st-3" d="m 170.69,226.33333 -9.16,11 a 5.35,5.35 0 0 1 -6.55,1.15 c -15.37,-8.34 -31,-13.84 -52.39,-21 a 5.43,5.43 0 0 1 -3.869998,-5.89 l 2.309998,-14.12 c 0.55,-3.32 4.28,-5.39 7.83,-4.36 23.72,6.89 42.22,14.89 60.74,26.89 a 4.23,4.23 0 0 1 1.09,6.33 z" />
+                    <path class="st-3" d="m 231.74,280.48333 -10.1,4.22 a 6.5,6.5 0 0 1 -6.84,-1.17 c -19.32,-18.08 -34,-29.77 -48,-38.44 a 4.83,4.83 0 0 1 -1.3,-7.3 l 7.81,-9.38 a 6.09,6.09 0 0 1 8,-1 c 15.74,11.15 32.07,25.4 52.17,44.38 a 5.16,5.16 0 0 1 -1.74,8.69 z" />
+                    <path class="st-4 st-fmb" d="m 229.51,280.48333 -10.1,4.22 a 6.5,6.5 0 0 1 -6.84,-1.17 c -19.33,-18.08 -34,-29.77 -48,-38.44 a 4.81,4.81 0 0 1 -1.3,-7.3 l 7.8,-9.38 a 6.1,6.1 0 0 1 8.06,-1 c 15.73,11.15 32.06,25.4 52.17,44.38 a 5.16,5.16 0 0 1 -1.79,8.69 z" />
+                    <path class="st-4 st-bmb" d="m 168.42,226.33333 -9.16,11 a 5.35,5.35 0 0 1 -6.55,1.15 c -15.38,-8.34 -31,-13.84 -52.39,-21 a 5.42,5.42 0 0 1 -3.870001,-5.89 l 2.300003,-14.12 c 0.55,-3.32 4.279998,-5.39 7.829998,-4.36 23.73,6.89 42.23,14.89 60.75,26.89 a 4.24,4.24 0 0 1 1.09,6.33 z" />
+                </svg>
             </div>
             <p>
                 Welcome to the mouse wheel scrolling test site! This tool is designed to test the functionality of
@@ -60,10 +64,13 @@
             </p>
         </div>
     </main>
-    <script src="/script.js?v=2"></script>
+    <script src="/script.js?v=3"></script>
     <script defer type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-        ym(97454852, "init", {clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});
+        const isLocalHost = location.hostname === "localhost" || location.hostname === "127.0.0.1";
+        if (!isLocalHost) {
+            (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+            ym(97454852, "init", {clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});
+        }
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/97454852" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
