--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </p>
         </div>
     </main>
+    <canvas id="canvas"></canvas>
     <script src="/script.js?v=4"></script>
+    <script defer src="/draw.js?v=0"></script>
     <script defer type="text/javascript" >
         const isLocalHost = location.hostname === "localhost" || location.hostname === "127.0.0.1";
         if (!isLocalHost) {
