--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <title>Проверка колеса мыши онлайн</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css?v=4">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" sizes="256x256" href="/favicon.png">
     <link rel="mask-icon" href="/favicon.svg">
@@ -40,12 +39,7 @@
                 <div class="mouse-image">
                     <svg class="mouse-svg" version="1.1" viewBox="0 0 546.29348 434.86084" width="547" height="435" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
                         <defs>
-                            <style >
-                                .st-1{fill:#686868;}
-                                .st-2{fill:#a5a5a5;}
-                                .st-3{fill:#474747;}
-                                .st-4{fill:#595959;}
-                            </style>
+                            <style>.st-1{fill:#686868;}.st-2{fill:#a5a5a5;}.st-3{fill:#474747;}.st-4{fill:#595959;}</style>
                         </defs>
                         <path fill="#3e3f3f" d="m 344.38,42.793327 c 78.05,48.24 155.59,99.120003 194.36,214.000003 18.22,70.1 1.23,91.71 -27,122 -80.32,86.18 -157.36,52 -202,34 -47,-19 -56.36,-25 -158.36,-115 -38,-33.57 -132.000001,-96.05 -141.000001,-146 -5.5499992,-30.94 10,-87.000003 71,-122.000003 C 111.5,12.523327 171.71,5.4433273 206.38,3.7933273 c 35.82,-1.69 107.51,20.2099997 138,38.9999997 z" />
                         <path class="st-1 st-rmb" d="m 255.37,67.493327 c 7.85,-5.75 31.11,-20.92 68.91,-30.08 a 2.72,2.72 0 0 0 0.7,-5 C 272.13,2.7533273 205.88,-3.7566727 160.38,1.8033273 116.1,7.2033273 88.819999,23.103327 80.279999,28.803327 a 1,1 0 0 0 0.61,1.8 l 10.14,-0.67 a 4.4,4.4 0 0 0 2.29,-0.83 c 0.9,-0.66 2.6,-1.84 5.740003,-3.82 a 11.59,11.59 0 0 1 5.449998,-1.8 c 17,-1.13 66.34,5 68.79,5.3 a 0.45,0.45 0 0 1 0.18,0.07 c 2,1.11 -4.64,5.08 -6.68,7.4 a 0.49,0.49 0 0 0 0.21,0.78 l 81.69,31.4 a 7.13,7.13 0 0 0 6.67,-0.94 z" />
@@ -76,15 +70,6 @@
         </div>
     </main>
     <canvas id="canvas"></canvas>
-    <script src="/script.js?v=4"></script>
-    <script defer src="/draw.js?v=0"></script>
-    <script defer type="text/javascript" >
-        const isLocalHost = location.hostname === "localhost" || location.hostname === "127.0.0.1";
-        if (!isLocalHost) {
-            (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-            ym(97454852, "init", {clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});
-        }
-    </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/97454852" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
 
