--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
         </noindex>
     </header>
     <main>
-        <div class="checkArea" id="checkArea"></div>
-        <div id="scrollHere">
+        <div class="sidebar" id="check-area"></div>
+        <div class="content" id="content-area">
             <span class="text">scroll here</span>
             <div class="mouse">
                 <div class="mouse-image">
