--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
         </div>
     </main>
     <canvas id="canvas"></canvas>
+    <div class="ball"></div>
     <noscript><div><img src="https://mc.yandex.ru/watch/97454852" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
 
