--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <main>
         <div class="sidebar" id="check-area"></div>
         <div class="content" id="content-area">
+            <div class="display" id="display"></div>
             <span class="text">scroll here</span>
             <div class="mouse">
                 <div class="mouse-image">
