--- a/src/index.html
+++ b/src/index.html
@@ -37,21 +37,23 @@
             <span class="text">scroll here</span>
             <div class="mouse">
                 <div class="mouse-image">
-                    <svg class="mouse-svg" version="1.1" viewBox="0 0 546.29348 434.86084" width="547" height="435" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-                        <defs>
-                            <style>.st-1{fill:#686868;}.st-2{fill:#a5a5a5;}.st-3{fill:#474747;}.st-4{fill:#595959;}</style>
-                        </defs>
-                        <path fill="#3e3f3f" d="m 344.38,42.793327 c 78.05,48.24 155.59,99.120003 194.36,214.000003 18.22,70.1 1.23,91.71 -27,122 -80.32,86.18 -157.36,52 -202,34 -47,-19 -56.36,-25 -158.36,-115 -38,-33.57 -132.000001,-96.05 -141.000001,-146 -5.5499992,-30.94 10,-87.000003 71,-122.000003 C 111.5,12.523327 171.71,5.4433273 206.38,3.7933273 c 35.82,-1.69 107.51,20.2099997 138,38.9999997 z" />
-                        <path class="st-1 st-rmb" d="m 255.37,67.493327 c 7.85,-5.75 31.11,-20.92 68.91,-30.08 a 2.72,2.72 0 0 0 0.7,-5 C 272.13,2.7533273 205.88,-3.7566727 160.38,1.8033273 116.1,7.2033273 88.819999,23.103327 80.279999,28.803327 a 1,1 0 0 0 0.61,1.8 l 10.14,-0.67 a 4.4,4.4 0 0 0 2.29,-0.83 c 0.9,-0.66 2.6,-1.84 5.740003,-3.82 a 11.59,11.59 0 0 1 5.449998,-1.8 c 17,-1.13 66.34,5 68.79,5.3 a 0.45,0.45 0 0 1 0.18,0.07 c 2,1.11 -4.64,5.08 -6.68,7.4 a 0.49,0.49 0 0 0 0.21,0.78 l 81.69,31.4 a 7.13,7.13 0 0 0 6.67,-0.94 z" />
-                        <path class="st-2 st-mmb" d="m 166.79,36.243327 a 0.5,0.5 0 0 0 0.21,0.79 l 0.28,0.11 -15.35,13.44 a 2.84,2.84 0 0 1 -1.19,0.62 c -5.51,1.33 -42.67,9.08 -51.529998,-21.28 a 2.82,2.82 0 0 1 0.27,-2.18 q 1.129998,-2 2.289998,-3.75 a 54.84,54.84 0 0 1 8,-9.92 c 9.07,-8.7099997 18.67,-10.2699997 27.57,-8.2899997 14.85,3.2999995 27.8,16.4299997 33.26,22.6799997 0.4,0.45 0.76,0.87 1.08,1.25 a 2.77,2.77 0 0 1 0.64,1.77 c -1.68,1.52 -4.36,3.44 -5.53,4.76 z" />
-                        <path fill="#7f7f7f" d="m 96.379999,45.053327 c 45.700001,26.93 55.000001,6 55.000001,6 0,0 -53.959998,-64.87 -55.000001,-6 z" />
-                        <path class="st-1 st-lmb" d="m 66.379999,37.793327 c -26.36,12.65 -74.6699992,69.820003 -65.1499992,97.570003 a 0.92,0.92 0 0 0 0.6,0.57 c 86.4799992,25.68 122.6000002,38.54 136.8900002,44.16 a 12.25,12.25 0 0 0 14.37,-4.17 c 14.9,-20.34 47.15,-69.53 94,-103.190003 a 0.89,0.89 0 0 0 -0.18,-1.55 c -80.51,-27.39 -81.33,-33.49 -84.51,-31.39 0,0 -10,12 -14.51,11.27 l -56.700001,-7.5 c -3.11,-0.41 -4,-4.55 -1.79,-6.77 2,-2 0.67,-2.75 -1,-2.63 -6.89,0.51 -17.79,1.61 -22.02,3.63 z" />
-                        <path fill="#353535" d="M -1.9643159e-7,139.09333 C 110.8,171.09333 110.8,171.09333 142.8,186.15333 c 32,15.06 227.54,105.61 178.6,231.28 -58.84,-11.43 -157.38,-107.35 -197.5,-141.37 -66.000001,-55.97 -115.9000007,-90.21 -123.90000019643159,-136.97 z" />
-                        <path fill="#262626" d="m 236.51,281.51333 -10.62,4.43 a 6.84,6.84 0 0 1 -7.2,-1.23 c -46.93,-43.92 -67.59,-52 -114.63,-67.82 a 5.69,5.69 0 0 1 -4.06,-6.18 l 2.43,-14.81 c 0.57,-3.49 4.48,-5.66 8.21,-4.59 49.85,14.44 77.69,33.8 127.79,81.09 3,2.82 2.08,7.47 -1.92,9.11 z" />
-                        <path class="st-3" d="m 170.69,226.33333 -9.16,11 a 5.35,5.35 0 0 1 -6.55,1.15 c -15.37,-8.34 -31,-13.84 -52.39,-21 a 5.43,5.43 0 0 1 -3.869998,-5.89 l 2.309998,-14.12 c 0.55,-3.32 4.28,-5.39 7.83,-4.36 23.72,6.89 42.22,14.89 60.74,26.89 a 4.23,4.23 0 0 1 1.09,6.33 z" />
-                        <path class="st-3" d="m 231.74,280.48333 -10.1,4.22 a 6.5,6.5 0 0 1 -6.84,-1.17 c -19.32,-18.08 -34,-29.77 -48,-38.44 a 4.83,4.83 0 0 1 -1.3,-7.3 l 7.81,-9.38 a 6.09,6.09 0 0 1 8,-1 c 15.74,11.15 32.07,25.4 52.17,44.38 a 5.16,5.16 0 0 1 -1.74,8.69 z" />
-                        <path class="st-4 st-bmb" d="m 229.51,280.48333 -10.1,4.22 a 6.5,6.5 0 0 1 -6.84,-1.17 c -19.33,-18.08 -34,-29.77 -48,-38.44 a 4.81,4.81 0 0 1 -1.3,-7.3 l 7.8,-9.38 a 6.1,6.1 0 0 1 8.06,-1 c 15.73,11.15 32.06,25.4 52.17,44.38 a 5.16,5.16 0 0 1 -1.79,8.69 z" />
-                        <path class="st-4 st-fmb" d="m 168.42,226.33333 -9.16,11 a 5.35,5.35 0 0 1 -6.55,1.15 c -15.38,-8.34 -31,-13.84 -52.39,-21 a 5.42,5.42 0 0 1 -3.870001,-5.89 l 2.300003,-14.12 c 0.55,-3.32 4.279998,-5.39 7.829998,-4.36 23.73,6.89 42.23,14.89 60.75,26.89 a 4.24,4.24 0 0 1 1.09,6.33 z" />
+                    <svg class="mouse-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128.85 223.49" >
+                        <style type="text/css">.st-0{fill:#282828;}.st-1{fill:url(#SVGID_1_);}.st-2{fill:#515151;}.st-3{fill:#777777;}.st-4{fill:#FFFFFF;}</style>
+                        <path class="st-0" d="M118.78,20.35c2.82,13.53-0.37,36.38,0.75,52.55c3.04,27.31,11.82,57.18,8.65,96.35 c-10.06,60.35-109.94,78.18-122.24,12.76c-5.53-34.47,7.94-57.78,8-77.18C14,84.72,10.24,53.65,0,26.47 C71.41,2.47,45.36,3.71,118.78,20.35z"/>
+                        <path class="st-0" d="M71.51,3.06c0.49,0,0.88,0.4,0.88,0.9L72.3,72.51c0,1.41-1.12,2.55-2.5,2.55H56.39c-1.38,0-2.5-1.14-2.5-2.55 l0.09-68.55c0-0.5,0.39-0.9,0.88-0.9H71.51z"/>
+                        <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="63.7472" y1="79.7498" x2="63.7472" y2="190.7519">
+                            <stop  offset="0" style="stop-color:#515151"/>
+                            <stop  offset="0.6006" style="stop-color:#444444"/>
+                            <stop  offset="1" style="stop-color:#3F3F3F"/>
+                        </linearGradient>
+                        <path class="st-1" d="M118.92,183.83c-4.59,43.89-102.12,61.17-110.12,0c-3.29-23.53,8.98-45.61,10.36-60.71 c1.25-13.77,1.7-30.28-1.42-48.06h96.45c-0.68,11.28-1.34,24.01-2.09,39.35C110.92,138.38,121.17,162.31,118.92,183.83z"/>
+                        <path class="st-2 st-lmb" d="M56.39,75.06H17.74C15.11,60.01,9.92,44.04,0.5,28.03c-0.72-1.23-0.68-2.78,0.19-3.91 C9.05,13.4,40.62,3.64,50.8,0.71c1.59-0.46,3.18,0.75,3.18,2.41v1.47l-0.09,67.97C53.89,73.94,55.01,75.06,56.39,75.06z"/>
+                        <path class="st-2 st-rmb" d="M118.76,21.03c-2.05,17.91-3.34,33.6-4.57,54.03H69.8c1.38,0,2.5-1.12,2.5-2.5l0.09-67.97V2.5 c0-1.57,1.41-2.75,2.95-2.46c8.54,1.61,33.2,7.09,42.61,18.3C118.58,19.08,118.87,20.06,118.76,21.03z"/>
+                        <path class="st-3 st-mmb" d="M70.13,20.59c0.41,0,0.74,0.21,0.74,0.46l-0.07,34.96c0,0.72-0.94,1.3-2.09,1.3h-11.2 c-1.15,0-2.09-0.58-2.09-1.3l0.07-34.96c0-0.25,0.33-0.46,0.74-0.46H70.13z"/>
+                        <path class="st-3 st-fmb" d="M11.29,61.58c3.29,7.25,5.22,30.65,5.22,30.65c0.08,0.44-0.27,0.85-0.71,0.85h-3.2c-0.38,0-0.69-0.29-0.72-0.66 c0,0-0.05-17.35-3.63-30.65c-0.11-0.41,0.3-0.79,0.72-0.79h1.6C10.92,60.97,11.14,61.26,11.29,61.58z"/>
+                        <path class="st-3 st-bmb" d="M9.37,131.13c0,0,3.7-24.54,2.78-35.6c-0.03-0.4,0.32-0.72,0.72-0.72h3.26c0.41,0,0.7,0.34,0.72,0.74 c0.89,12.81-2.37,35.6-2.37,35.6c-0.01,0.39-0.33,0.71-0.72,0.71h-3.67C9.69,131.86,9.37,131.53,9.37,131.13z"/>
+                        <polygon class="st-4 st-wu" points="67.46,11.89 64.52,11.89 64.52,19.99 61.68,19.99 61.68,11.89 58.74,11.89 63.1,4.35 "/>
+                        <polygon class="st-4 st-wd" points="58.79,66.01 61.72,66.01 61.72,57.91 64.56,57.91 64.56,66.01 67.5,66.01 63.14,73.56 "/>
                     </svg>
                     <div class="mouse-button-count mouse-button-left" id="mouse-left-count"></div>
                     <div class="mouse-button-count mouse-button-middle" id="mouse-middle-count"></div>
