--- a/src/index.html
+++ b/src/index.html
@@ -38,15 +38,28 @@
             <div class="mouse">
                 <div class="mouse-image">
                     <svg class="mouse-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128.85 223.49" >
-                        <style type="text/css">.st-0{fill:#282828;}.st-1{fill:url(#SVGID_1_);}.st-2{fill:#515151;}.st-3{fill:#777777;}.st-4{fill:#FFFFFF;}</style>
+                        <style type="text/css">.st-0{fill:#282828;}.st-1{fill:url(#MOUSE);}.st-2{fill:url(#BUTTON);}.st-3{fill:#777777;}.st-4{fill:#FFFFFF;}</style>
                         <path class="st-0" d="M118.78,20.35c2.82,13.53-0.37,36.38,0.75,52.55c3.04,27.31,11.82,57.18,8.65,96.35 c-10.06,60.35-109.94,78.18-122.24,12.76c-5.53-34.47,7.94-57.78,8-77.18C14,84.72,10.24,53.65,0,26.47 C71.41,2.47,45.36,3.71,118.78,20.35z"/>
                         <path class="st-0" d="M71.51,3.06c0.49,0,0.88,0.4,0.88,0.9L72.3,72.51c0,1.41-1.12,2.55-2.5,2.55H56.39c-1.38,0-2.5-1.14-2.5-2.55 l0.09-68.55c0-0.5,0.39-0.9,0.88-0.9H71.51z"/>
-                        <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="63.7472" y1="79.7498" x2="63.7472" y2="190.7519">
+                        <linearGradient id="MOUSE" gradientUnits="userSpaceOnUse" x1="63.7472" y1="79.7498" x2="63.7472" y2="190.7519">
                             <stop  offset="0" style="stop-color:#515151"/>
                             <stop  offset="0.6006" style="stop-color:#444444"/>
                             <stop  offset="1" style="stop-color:#3F3F3F"/>
                         </linearGradient>
-                        <path class="st-1" d="M118.92,183.83c-4.59,43.89-102.12,61.17-110.12,0c-3.29-23.53,8.98-45.61,10.36-60.71 c1.25-13.77,1.7-30.28-1.42-48.06h96.45c-0.68,11.28-1.34,24.01-2.09,39.35C110.92,138.38,121.17,162.31,118.92,183.83z"/>
+                        <linearGradient id="BUTTON" gradientUnits="userSpaceOnUse" x1="28.1958" y1="13.4972" x2="28.1958" y2="69.8916">
+                            <stop offset="0" style="stop-color:#515151"/>
+                            <stop offset="0.6006" style="stop-color:#444444;stop-opacity:0.9"/>
+                            <stop offset="1" style="stop-color:#3F3F3F;stop-opacity:0"/>
+                        </linearGradient>
+                        <linearGradient id="BUTTON_PRESS" gradientUnits="userSpaceOnUse" x1="28.1958" y1="13.4972" x2="28.1958" y2="69.8916">
+                            <stop offset="0" style="stop-color:#aaa"/>
+                            <stop offset="1" style="stop-color:#444444;stop-opacity:0"/>
+                        </linearGradient>
+                        <linearGradient id="BUTTON_ACTIVE" gradientUnits="userSpaceOnUse" x1="28.1958" y1="13.4972" x2="28.1958" y2="69.8916">
+                            <stop offset="0" style="stop-color:#777"/>
+                            <stop offset="1" style="stop-color:#444444;stop-opacity:0"/>
+                        </linearGradient>
+                        <path class="st-1" d="M118.92,183.83c-4.59,43.89-102.12,61.17-110.12,0c-3.29-23.53,8.98-45.61,10.36-60.71 c1.25-13.77,1.7-30.28-1.42-48.06C15.11,60.01,9.92,44.04,0.5,28.03c-0.72-1.23-0.68-2.78,0.19-3.91C9.05,13.4,40.62,3.64,50.8,0.71 c1.59-0.46,3.18,0.75,3.18,2.41v1.47l-0.09,67.97c0,1.38,1.12,2.5,2.5,2.5H69.8c1.38,0,2.5-1.12,2.5-2.5l0.09-67.97V2.5 c0-1.57,1.41-2.75,2.95-2.46c8.54,1.61,33.2,7.09,42.61,18.3c0.63,0.74,0.92,1.72,0.81,2.69c-2.05,17.91-3.34,33.6-4.57,54.03 c-0.68,11.28-1.34,24.01-2.09,39.35C110.92,138.38,121.17,162.31,118.92,183.83z"/>
                         <path class="st-2 st-lmb" d="M56.39,75.06H17.74C15.11,60.01,9.92,44.04,0.5,28.03c-0.72-1.23-0.68-2.78,0.19-3.91 C9.05,13.4,40.62,3.64,50.8,0.71c1.59-0.46,3.18,0.75,3.18,2.41v1.47l-0.09,67.97C53.89,73.94,55.01,75.06,56.39,75.06z"/>
                         <path class="st-2 st-rmb" d="M118.76,21.03c-2.05,17.91-3.34,33.6-4.57,54.03H69.8c1.38,0,2.5-1.12,2.5-2.5l0.09-67.97V2.5 c0-1.57,1.41-2.75,2.95-2.46c8.54,1.61,33.2,7.09,42.61,18.3C118.58,19.08,118.87,20.06,118.76,21.03z"/>
                         <path class="st-3 st-mmb" d="M70.13,20.59c0.41,0,0.74,0.21,0.74,0.46l-0.07,34.96c0,0.72-0.94,1.3-2.09,1.3h-11.2 c-1.15,0-2.09-0.58-2.09-1.3l0.07-34.96c0-0.25,0.33-0.46,0.74-0.46H70.13z"/>
